2008-05-28  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Patch.pm (check_apply): New function to
	verify if a patch will successfully apply on top of a given
	directory.
	* scripts/Dpkg/Source/Package/V3/quilt.pm (check_patches_applied):
	Don't trust debian/patches/.dpkg-source-applied blindly. Get a
	list of (supposedly unapplied) patches and verify if the first
	patch applies or not. If yes, then apply the patch series,
	otherwise do not (and assume that the patch series is already
	applied).

2008-05-23  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Package/V2.pm (do_build): Display a
	message when local modifications are stored in a new
	automatic patch. This messages includes a list of
	modified files.

2008-05-23  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Package/V3/quilt.pm: Remove the .diff
	from the name of the automatically generated patch. It will
	facilitate the switch to this format: packages using
	patch system that apply debian/patches/*.{patch,diff}
	will not be bothered by the presence of the quilt serie
	created by dpkg-source itself.
	* man/dpkg-source.1: Update the documentation accordingly.
	* man/po/*.po: Fix all the filenames to avoid fuzzying
	translations.

2008-05-22  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Package/V3/quilt.pm: Add missing "use
	File::Path" for mkpath().

2008-05-13  Guillem Jover  <guillem@debian.org>

	* src/main.c (setforce): Add help output for '--force-breaks'.

2008-05-12  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.20~.

2008-05-12  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.19.

2008-05-12  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gencontrol.pl: Get Package-Type field value also from
	custom field.

2008-05-11  Raphael Hertzog  <hertzog@debian.org>

	* src/processarc.c (process_archive): While removing files that
	disappeared, move the call to namenodetouse before the test