@@ -1,5 +1,13 @@
 2008-05-28  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/Dpkg/Source/Package/V3/quilt.pm: Factorize calls to
+	quilt in a new run_quilt() function. And check only once
+	if quilt is available while setting the default value of
+	without_quilt option. Last but not least, register properly the
+	automatically generated patch with quilt import.
+
+2008-05-28  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg/Source/Patch.pm (check_apply): New function to
 	verify if a patch will successfully apply on top of a given
 	directory.
